--- a/users/templates/choice_your_city.html
+++ b/users/templates/choice_your_city.html
@@ -19,15 +19,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
-<body>
-    <header class="d-flex justify-content-between align-items-center">
+<body {% if user.theme %}style='background: #282E33;'{% endif %}>
+    <header class="d-flex justify-content-between align-items-center" {% if user.theme %}style='background: #18191D;'{% endif %}>
         <div class="lang-or-theme d-flex">
-            <button class="theme-button light-theme" id="theme-button">
-                <i class="bi bi-cloud-moon"></i>
-            </button>
         </div>
     </header>
-    <main>
+    <main {% if user.theme %}style='background: #282E33;'{% endif %}>
         <h1 class="registration-title">Выбери свой город</h1>
         <form action="{% url 'users:choice_your_city' %}" method="post">
             {% csrf_token %}
