--- a/card/templates/index.html
+++ b/card/templates/index.html
@@ -11,8 +11,8 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'style/style_card.css' %}">
 </head>
-<body style="overflow-y: auto; overflow-x: hidden;">
-  <nav class="navbar navbar-dark" style="background-color: rgb(35, 45, 58);">
+<body style="overflow-y: auto; overflow-x: hidden; {% if user.theme %}background: #333;{% endif %}">
+  <nav class="navbar" {% if user.theme %}style='background: #333;'{% endif %}>
     <div class="d-flex justify-content-center w-100">
       <div class="svg-container d-flex justify-content-between" style="width: 250px;">
         <svg width="35" height="35" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -41,7 +41,7 @@
   </nav>
   
 
-  <div id="settingsModal" class="modal" tabindex="-1" role="dialog">
+  <div id="settingsModal" class="modal" tabindex="-1" role="dialog" {% if user.theme %}style='background: #333;'{% endif %}>
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -118,7 +118,7 @@
     </div>
   </div>
 
-  <div class="info-section">
+  <div class="info-section" {% if user.theme %}style='background: #333;'{% endif %}>
     <div class="info-content">
       <div class="user-goal">
         <i class="bi bi-emoji-smile-fill smile-icon"></i>
